Fix style issue background color not covering page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,10 @@ footer {
 
 /* Rules */
 
+.rules-outer {
+    padding-bottom: 20px;
+}
+
 .rules-outer > h2 {
     text-align: center;
     padding-top: 20px;
